--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
 
   <artifactId>rpmsign-plugin</artifactId>
-  <version>0.4.5-SNAPSHOT</version>
+  <version>0.4.5</version>
   <packaging>hpi</packaging>
 
   <url>https://wiki.jenkins-ci.org/display/JENKINS/RPM+Sign+Plugin</url>
@@ -21,7 +21,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.4.1</version>
+        <version>2.5.1</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -94,6 +94,6 @@
     <connection>scm:git:git://github.com/jenkinsci/rpmsign-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/rpmsign-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/rpmsign-plugin</url>
-    <tag>HEAD</tag>
+    <tag>rpmsign-plugin-0.4.5</tag>
   </scm>
 </project>
