--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.2</version>
+    <version>3.4</version>
   </parent>
 
   <artifactId>rpmsign-plugin</artifactId>
@@ -14,7 +14,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jenkins.version>1.609.1</jenkins.version>
+    <jenkins.version>1.625.3</jenkins.version>
+    <java.level>8</java.level>
   </properties>
 
   <build>
