--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
 
   <artifactId>rpmsign-plugin</artifactId>
-  <version>0.5.2-SNAPSHOT</version>
+  <version>0.5.2</version>
   <packaging>hpi</packaging>
 
   <url>https://plugins.jenkins.io/rpmsign-plugin</url>
@@ -91,6 +91,6 @@
     <connection>scm:git:git://github.com/jenkinsci/rpmsign-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/rpmsign-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/rpmsign-plugin</url>
-    <tag>HEAD</tag>
+    <tag>rpmsign-plugin-0.5.2</tag>
   </scm>
 </project>
